@@ -6,13 +6,11 @@ import io.jenkins.plugins.tuleap_api.client.AccessKeyApi;
 import io.jenkins.plugins.tuleap_api.client.AccessKeyScope;
 import io.jenkins.plugins.tuleap_credentials.exceptions.InvalidAccessKeyException;
 import io.jenkins.plugins.tuleap_credentials.exceptions.InvalidScopesForAccessKeyException;
-import java.util.Arrays;
-import java.util.Collections;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AccessKeyChecker {
-    private static List<String> MANDATORY_SCOPES = Collections.unmodifiableList(Arrays.asList("write:rest", "write:git_repository"));
+    private static List<String> MANDATORY_SCOPES = List.of("write:rest", "write:git_repository");
 
     private AccessKeyApi client;
 
@@ -40,7 +38,7 @@ public class AccessKeyChecker {
         .getAccessKeyScopes(secret)
         .stream()
         .map(AccessKeyScope::getIdentifier)
-        .collect(Collectors.toList())
+        .toList()
         .containsAll(MANDATORY_SCOPES);
     }
 }
